// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> Component render renders an \`.code-ui-button-danger\` component 1`] = `
<button
  className="code-ui-button code-ui-button-danger"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an \`.code-ui-button-dashed\` component 1`] = `
<button
  className="code-ui-button code-ui-button-dashed"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an \`.code-ui-button-default\` component 1`] = `
<button
  className="code-ui-button code-ui-button-default"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an \`.code-ui-button-primary\` component 1`] = `
<button
  className="code-ui-button code-ui-button-primary"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an \`.code-ui-button-success\` component 1`] = `
<button
  className="code-ui-button code-ui-button-success"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an \`.code-ui-button-warn\` component 1`] = `
<button
  className="code-ui-button code-ui-button-warn"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an disabled of dashed 1`] = `
<button
  className="code-ui-button code-ui-button-dashed code-ui-button-dashed-disabled"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an disabled of default 1`] = `
<button
  className="code-ui-button code-ui-button-default code-ui-button-disabled"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders an disabled of primary 1`] = `
<button
  className="code-ui-button code-ui-button-primary code-ui-button-disabled"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`<Button/> Component render renders loading 1`] = `
<button
  className="code-ui-button code-ui-button-primary"
  onClick={[Function]}
>
  <div
    className="code-ui-button-loading"
  >
    <svg
      className="code-ui-svg"
    >
      <use
        xlinkHref="#loading"
      />
    </svg>
  </div>
  <span />
</button>
`;
